syntax = "proto3";

package user;
import "post.proto";

service UserService {
    rpc CreateUser(User) returns (User);
    rpc GetByIdUser(GetByIdRequest) returns (User);
    rpc GetAllUsers(Empty)returns(GetAllUser);
    rpc DeleteById(DeleteByIdReq)returns(Empty);
    rpc UpdateById(UpdateByIdReq) returns(Empty);
    rpc ListUser(ListUserReq) returns(ListUserResponse);
}

message GetByIdRequest {
    string user_id = 1;
}

message DeleteByIdReq{
    string user_id=1;
}

message ListUserReq{
    int64 page=1;
    int64 limit=2;
}

message ListUserResponse{
    repeated User users=1;
    int64 count=2;
}

message UpdateByIdReq{
    string user_id=1;
    User users=2;
}

message User {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    repeated Post posts = 4;
}

message GetAllUser {
    repeated User users=1;
}

message UpdateUserResponse {
    string id = 1;
}